[package]
name = "image_picker"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1.6"
eframe = "0.18.0"
egui =  { version = "0.18.1", features = ["serde"] }
egui_extras = { version = "0.18.0", features = ["image"] }
env_logger = "0.9.0"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
log = "0.4"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
